# lean_assistant_RAG_project

./: .gitignore  pyproject.toml
PRPs/: mcp_document_processor.prp.md
agent_deep_research_crew/docs/: ARCHITECTURE.md  PLANIFICATION.md  VISION.md
agent_lean_assistant/docs/: ARCHITECTURE.md  PLANIFICATION.md  VISION.md
general/: ARCHITECTURE.md  GEMINI.md  PLANIFICATION.md  VISION.md
general/docs_rag_platform_legacy/: ARCHITECTURE.md  GEMINI.md  PLANIFICATION.md  VISION.md
general/mcp_template/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
mcp_document_processor/: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
mcp_document_processor/docs/: ARCHITECTURE.md  PLANIFICATION.md  VISION.md
mcp_document_processor/legacy_code_examples/: main.py  parser.py
mcp_document_processor/src/: main.py  utils.py
mcp_document_processor/tests/: test_csv_processor.py  test_docx_processor.py  test_json_processor.py  test_pdf_processor.py  test_xlsx_processor.py
mcp_document_processor/tools/: csv_parser.py  docx_parser.py  json_parser.py  pdf_parser.py  xlsx_parser.py
mcp_media_processor/docs/: ARCHITECTURE.md  PLANIFICATION.md  VISION.md
mcp_media_processor/legacy_code_examples/: main.py  processor.py
mcp_media_processor/src/: Dockerfile
mcp_neo4j_processor/docs/: ARCHITECTURE.md  PLANIFICATION.md  VISION.md
mcp_neo4j_processor/legacy_code_examples/: graph_writer.py  main.py  parser.py  requirements.txt
mcp_query_handler/docs/: ARCHITECTURE.md  PLANIFICATION.md  VISION.md
mcp_query_handler/legacy_code_examples/: main.py  (+1 more)
(+35 files in other folders)
